<resources>
    <string name="app_name">Music</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="listen_now">Listen Now</string>
    <string name="recent">Recents</string>
    <string name="music_library">Music Library</string>
    <string name="setting">Settings</string>
    <string name="help_feedback"><![CDATA[Help & feedback]]></string>
    <string name="my_app_title">My Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_search">Search</string>
    <string name="notification_channel_name">Notification channel name</string>
    <string name="notification_channel_description">Notification channel description</string>
    <string name="notification_title">Music player</string>
    <string name="notification_text">text</string>
    <string name="todo">TODO</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="favorite_songs">Favorite Songs</string>
    <string name="text_favorite_song">Bạn chưa có bài hát yêu thích</string>
    <string name="add_favorite">Add favorite</string>
    <string name="remove_favorite">Remove favorite</string>
    <string name="text_list_song">Bạn chưa có bài hát</string>
</resources>
